--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.icon {
+		@apply h-9 w-6 text-gray-500 lg:w-9 cursor-pointer rounded-sm lg:p-1 lg:hover:bg-gray-100;
+	}
+}
